crates/jarl-core/src/lints/base/assignment/snapshots/jarl_core__lints__base__assignment__tests__assignment_diagnostic_ranges-3.snap
---
source: crates/jarl-core/src/lints/base/assignment/mod.rs
expression: "snapshot_lint(\"1 -> x\")"
---
warning: assignment
 --> <test>:1:3
  |
1 | 1 -> x
  |   ---- Use `<-` for assignment.
  |
Found 1 error.
