crates/jarl-core/src/lints/base/assignment/snapshots/jarl_core__lints__base__assignment__tests__assignment_diagnostic_ranges-4.snap
---
source: crates/jarl-core/src/lints/base/assignment/mod.rs
expression: "snapshot_lint(\"foo() |>\\n  bar() |>\\n  baz() -> x\")"
---
warning: assignment
 --> <test>:3:9
  |
3 |   baz() -> x
  |         ---- Use `<-` for assignment.
  |
Found 1 error.
