crates/jarl-core/src/lints/base/assignment/snapshots/jarl_core__lints__base__assignment__tests__assignment_diagnostic_ranges-5.snap
---
source: crates/jarl-core/src/lints/base/assignment/mod.rs
expression: "snapshot_lint(\"1 -> names(\\nx)\")"
---
warning: assignment
 --> <test>:1:3
  |
1 |   1 -> names(
  |  ___-
2 | | x)
  | |__- Use `<-` for assignment.
  |
Found 1 error.
