crates/jarl-core/src/lints/base/assignment/snapshots/jarl_core__lints__base__assignment__tests__fix_output.snap
---
source: crates/jarl-core/src/lints/base/assignment/mod.rs
expression: "get_fixed_text(vec![\"blah=1\", \"blah = 1\", \"blah = fun(1)\",\n\"names(blah) = 'a'\", \"x[[1]] = 2\", \"fun((blah = fun(1)))\", \"1 -> fun\",\n\"'a' -> names(fun)\", \"2 -> x[[1]]\",], \"assignment\", None)"
---
OLD:
====
blah=1
NEW:
====
blah <- 1

OLD:
====
blah = 1
NEW:
====
blah <- 1

OLD:
====
blah = fun(1)
NEW:
====
blah <- fun(1)

OLD:
====
names(blah) = 'a'
NEW:
====
names(blah) <- 'a'

OLD:
====
x[[1]] = 2
NEW:
====
x[[1]] <- 2

OLD:
====
fun((blah = fun(1)))
NEW:
====
fun((blah <- fun(1)))

OLD:
====
1 -> fun
NEW:
====
fun <- 1

OLD:
====
'a' -> names(fun)
NEW:
====
names(fun) <- 'a'

OLD:
====
2 -> x[[1]]
NEW:
====
x[[1]] <- 2
